--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-spinkit": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +28,7 @@
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.80.0",
     "solc": "^0.4.22",
+    "surge": "^0.20.1",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.26"
   }
