--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs-extra": "^5.0.0",
     "ganache-cli": "^6.1.0",
     "mocha": "^5.1.1",
+    "pure-react-carousel": "^1.12.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
