--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ganache-cli": "^6.1.0",
     "mocha": "^5.1.1",
     "pure-react-carousel": "^1.12.2",
+    "react-device-detect": "^1.4.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
